--- a/Labguide/08.2-Assignment.html
+++ b/Labguide/08.2-Assignment.html
@@ -505,5 +505,7 @@ kubectl get service category</code></pre>
 </div>
 </div>
 </div>
+<script src="jquery-3.5.1.min.js"></script>
+<script src="copy.js"></script>
 </body>
 </html>
